# pybefit

./: .gitignore  ChangeLog.md  ChangeLog.txt  LICENSE  LICENSE.md  README.md  cma.py  environments.py  helpers.py  inference.py  optmethods.py  pmodels.py  pyproject.toml  rmodels.py  setup.py  simulate.py
agents/: __init__.py  active_inference.py  bayesian.py  dynamic_programming.py  rl.py
examples/: fit_behavior_socinf_task.ipynb  test_inference_for_rw_hgf_sgf.ipynb
examples/agent_development/: agent_creation.ipynb  agent_testing.ipynb  local.py
examples/control_dilemmas/: ADP_EFE_IV_comparison.ipynb  EFE_IV_RC_comparison.ipynb  context.npy  context_300.npy  generate_environment.py  imprecise_precise_duration_beliefs_comparison.ipynb  offers.npy  offers_300.npy  setup_environment.py  simulate_behaviour.ipynb  simulate_behaviour_2.ipynb  simulate_behaviour_3.ipynb
examples/plandepth/: Introduction.ipynb  analysing_behavioural_data.ipynb  experimental_variables.mat  fitting_model_to_behaviour.ipynb  introduction.ipynb  pars_post_samples_main.csv  simulate.py
examples/pymdp/: behavioural_data_agency.csv  epistemic_foraging_task.ipynb  simulating_and_fitting_agency_task.ipynb  simulating_and_fitting_pymdp_agent.ipynb
examples/social_influence/: Conditions.mat  advice_outcome.npy  advice_reliability.npy  bias_estimates.csv  fit_behavior_socinf_task.ipynb  follow.npy  offers.npy  test_inference_for_rw_hgf_sgf.ipynb
examples/sparse_regression/: sparse_regression.ipynb
examples/temp_rev_learn/: analyse_behavioural_data.ipynb  fit_behavior_pred_change.ipynb  non_parameteric_priors.ipynb  test_inference.ipynb  test_inference_for_pred_change.ipynb
examples/temporal_rev_learn/: README.md  agents.py  analyse_behavioural_data.ipynb  behavioural_data_insilico.ipynb  fit_behavior_nb_coxian_pyro.ipynb  fit_behavior_pred_change.ipynb  fit_behavioural_data_numpyro.ipynb  format_simulated_waics.py  format_tmp_files.py  plot_behavioural_data.ipynb  prior_predictive_checks.ipynb  run_fits.py  run_fits_dynpref.py  run_fits_mixture.py  run_fits_single.py  run_fits_test.py  run_python_fits.sh  run_python_script.sh  run_python_sims.sh  run_sims.py  stats.py  test_inference.ipynb  utils.py
inference/: __init__.py  flat.py  hierarchical.py  infer.py  nonparametric.py
tasks/: __init__.py  bandits.py  rev_learning.py
(+115 files in other folders)
