[tool.poetry]
name = "PyBefit"
version = "0.1.0"
description = "PyBefit is a Python library for Bayesian analysis of behavioral data."
authors = ["Dimitrije Markovic <dimitrije.markovic@tu-dresden.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">=1.22.1"
pandas = ">=1.4.0"
matplotlib = ">=3.5.1"
seaborn = ">=0.11.2"
pyro-ppl = ">=1.8.0"
numpyro = ">=0.9.1"
jupyter = ">=1.0.0"
jupyterthemes = ">=0.20.0"
torch = ">=1.11.0"
jax = ">=0.3.3"
jaxlib = ">=0.3.2"
pycm = ">=3.4"

[tool.poe.tasks]
## PyTorch with CUDA 11.3
## Jax with CUDA 11.1
## Run with the commands "poe force-cuda11-torch" and "poe force-cuda11-jax"
## See https://github.com/python-poetry/poetry/issues/2543
force-cuda11-torch = "pip install torch torchvision torchaudio --upgrade --extra-index-url https://download.pytorch.org/whl/cu113"
force-cuda11-numpyro = "pip install 'numpyro[cuda]' --upgrade -f https://storage.googleapis.com/jax-releases/jax_releases.html"

[tool.poetry.dev-dependencies]
poethepoet = ">=0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
